--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jobinijohnson07.github.io/shopping-react",
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "@types/three": "^0.152.1",
     "bootstrap": "^5.0.1",
     "framer-motion": "^10.0.1",
+    "gh-pages": "^6.1.1",
     "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-colorful": "5.6.1",
@@ -29,6 +31,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
