--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "react-scripts build && source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
+    "source-map-explorer": "^2.5.3",
     "source-map-loader": "^5.0.0"
   }
 }
