--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jobinijohnson07.github.io/shopping-react",
+  "homepage": "http://jobinijohnson07.github.io/shopping-react/",
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
